@@ -3,29 +3,23 @@ package school.redrover;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.ExpectedConditions;
-import org.openqa.selenium.support.ui.WebDriverWait;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 import school.redrover.runner.BaseTest;
 
-import java.time.Duration;
 
 public class PipelineTest extends BaseTest {
 
+    private static final String PROJECT_NAME = "Project";
+
     @Test
-    public void testCreatePipeline() {
-
-        final String nameProject = "Project1";
-
-        createNewProject(nameProject, "Pipeline");
-
-        getDriver().findElement(By.cssSelector(".jenkins-submit-button")).click();
-        getDriver().findElement(By.id("jenkins-home-link")).click();
+    public void testCreate() {
+        createNewProjectAndGoMainPageByLogo(PROJECT_NAME + 1, ProjectType.Pipeline);
 
         String actualJobName = getDriver().findElement(By.xpath(
                 "//table[@id='projectstatus']/tbody/tr/td/a/span")).getText();
 
-        Assert.assertEquals(actualJobName, nameProject);
+        Assert.assertEquals(actualJobName, PROJECT_NAME + 1);
     }
 
     @Test
@@ -33,85 +27,146 @@ public class PipelineTest extends BaseTest {
 
         getDriver().findElement(By.xpath("//a[@href ='newJob']")).click();
 
-        getDriver().findElement(By.xpath(
-                "//li[@class='org_jenkinsci_plugins_workflow_job_WorkflowJob']")).click();
-        WebElement buttonSubmit = getDriver().findElement(By.id("ok-button"));
+        getDriver().findElement(By.xpath("//li[@class='org_jenkinsci_plugins_workflow_job_WorkflowJob']")).click();
 
         WebElement actualErrorMessage = getDriver().findElement(By.id("itemname-required"));
 
-        Assert.assertFalse(buttonSubmit.isEnabled());
+        Assert.assertFalse(getDriver().findElement(By.id("ok-button")).isEnabled());
         Assert.assertEquals(actualErrorMessage.getText(), "» This field cannot be empty, please enter a valid name");
     }
 
     @Test
-    public void testRenameJob() {
+    public void testCreateWithDescription() {
+        final String desc = "The leading open source automation server, Jenkins provides hundreds of plugins to support building, deploying and automating any project.";
+        final String name = PROJECT_NAME + "AndDescription";
+        createNewProjectWithDescriptionAndGoHomePageByLogo(name, ProjectType.Pipeline,desc);
 
-        final String nameJob = "Project2";
-        final String newNameJob = "Project2New";
+        getDriver().findElement(By.xpath("//td/a/span[text()='%s']/..".formatted(name))).click();
+        getDriver().findElement(By.xpath("//div[@id='description']/div")).getText();
 
-        createNewProject(nameJob,"Pipeline");
+        Assert.assertEquals(getDriver().findElement(
+                By.xpath("//div[@id='description']/div")).getText(),
+                desc);
+    }
 
-        getDriver().findElement(By.cssSelector(".jenkins-submit-button")).click();
-        getDriver().findElement(By.id("jenkins-home-link")).click();
+    @Test(dependsOnMethods = "testCreateWithDescription")
+    public void testRename() {
+        final String newName = PROJECT_NAME + "2New";
 
-        getDriver().findElement(By.xpath("//table[@id='projectstatus']/tbody/tr/td/a/span")).click();
+        getDriver().findElement(By.xpath("//table[@id='projectstatus']/tbody/tr/td/a/span/..")).click();
 
         getDriver().findElement(By.xpath("//div[@id='tasks']/div[7]")).click();
 
         WebElement inputName = getDriver().findElement(By.xpath("//input[@checkdependson='newName']"));
         inputName.clear();
-        inputName.sendKeys(newNameJob);
+        inputName.sendKeys(newName);
 
         getDriver().findElement(By.xpath("//button[@name='Submit']")).click();
 
-        getDriver().findElement(By.id("jenkins-home-link")).click();
+        goToHomePageByLogo();
 
-        String actualJobName = getDriver().findElement(By.xpath(
-                "//table[@id='projectstatus']/tbody/tr/td/a/span")).getText();
+        String actualJobName = getDriver().findElement(
+                By.xpath("//table[@id='projectstatus']/tbody/tr/td/a/span")).getText();
 
-        Assert.assertEquals(actualJobName, newNameJob);
+        Assert.assertEquals(actualJobName, newName);
     }
 
     @Test
-    public void testDeleteJob() {
+    public void testAddDescription() {
+        final String name = PROJECT_NAME + "AndDesc";
+        final String desc = "Add description for new project 45";
+        createNewProjectAndGoMainPageByLogo(name, ProjectType.Pipeline);
 
-        final String nameJob = "Project3";
+        getDriver().findElement(By.xpath("//td/a/span[text() = '%s']/..".formatted(name))).click();
 
-        createNewProject(nameJob, "Pipeline");
+        getDriver().findElement(By.id("description-link")).click();
+        getDriver().findElement(By.name("description")).sendKeys(desc);
+        getDriver().findElement(By.name("Submit")).click();
 
-        getDriver().findElement(By.cssSelector(".jenkins-submit-button")).click();
-        getDriver().findElement(By.id("jenkins-home-link")).click();
+        Assert.assertEquals(getDriver().findElement(By.id("description")).getText(), desc);
+    }
 
-        getDriver().findElement(By.xpath(
-                "//table[@id='projectstatus']/tbody/tr/td/a/span")).click();
+    @Test(dependsOnMethods = "testRename")
+    public void testDelete() {
 
-        getDriver().findElement(By.xpath(
-                "//a[@data-title='Delete Pipeline']")).click();
+        getDriver().findElement(By.xpath("//table[@id='projectstatus']/tbody/tr/td/a/span/..")).click();
 
-        WebDriverWait wait = new WebDriverWait(getDriver(), Duration.ofSeconds(15));
+        getDriver().findElement(By.xpath("//a[@data-title='Delete Pipeline']")).click();
 
-        wait.until(ExpectedConditions.visibilityOfElementLocated(By.xpath(
-                "//button[@data-id='ok']"))).click();
+        getWait10().until(ExpectedConditions.visibilityOfElementLocated(By.xpath("//button[@data-id='ok']"))).click();
 
-        String actualMessage = getDriver().findElement(By.xpath(
-                "//div[@class='empty-state-block']/h1")).getText();
+        String actualMessage = getDriver().findElement(By.xpath("//div[@class='empty-state-block']/h1")).getText();
 
         Assert.assertEquals(actualMessage, "Welcome to Jenkins!");
     }
 
-    private void createNewProject(String name, String type) {
+    @Test
+    public void testCreateWithNotUniqueName() {
+        String nonUniqueProjectName = PROJECT_NAME + "Unique";
 
-        WebDriverWait waite = new WebDriverWait(getDriver(),Duration.ofSeconds(10));
+        createNewProjectAndGoMainPageByLogo(nonUniqueProjectName, ProjectType.Pipeline);
+
+        getDriver().findElement(By.xpath("//a[contains(@href, 'newJob')]")).click();
+
+        getDriver().findElement(By.id("name")).sendKeys(nonUniqueProjectName);
+
+        String actualErrorMessage = getDriver().findElement(By.id("itemname-invalid")).getText();
+
+        Assert.assertEquals(actualErrorMessage, "» A job already exists with the name ‘%s’".formatted(nonUniqueProjectName));
+    }
+
+    private void createNewProjectWithDescriptionAndGoHomePageByLogo(String name, ProjectType projectType, String description) {
 
         getDriver().findElement(By.xpath("//a[@href ='newJob']")).click();
 
         getDriver().findElement(By.id("name")).sendKeys(name);
 
-        waite.until(ExpectedConditions.elementToBeClickable(By.xpath(
-                String.format("//div[@id='items']//label/span[text()= '%s']", type)))).click();
+        getWait10().until(ExpectedConditions.elementToBeClickable(
+                By.xpath(("//div[@id='items']//label/span[text()= '%s']".formatted(projectType))))).click();
 
         getDriver().findElement(By.id("ok-button")).click();
 
+        getDriver().findElement(By.name("description")).sendKeys(description);
+        getDriver().findElement(By.cssSelector(".jenkins-submit-button")).click();
+
+        goToHomePageByLogo();
+    }
+
+    private void createNewProjectAndGoMainPageByLogo(String name, ProjectType projectType) {
+
+        getDriver().findElement(By.xpath("//a[@href ='newJob']")).click();
+
+        getDriver().findElement(By.id("name")).sendKeys(name);
+
+        getWait10().until(ExpectedConditions.elementToBeClickable(
+                By.xpath(("//div[@id='items']//label/span[text()= '%s']".formatted(projectType))))).click();
+
+        getDriver().findElement(By.id("ok-button")).click();
+        getDriver().findElement(By.cssSelector(".jenkins-submit-button")).click();
+        getDriver().findElement(By.id("jenkins-home-link")).click();
+    }
+
+    private void goToHomePageByLogo() {
+        getDriver().findElement(By.id("jenkins-home-link")).click();
+    }
+
+    private enum ProjectType {
+        FreestyleProject("Freestyle project"),
+        Pipeline("Pipeline"),
+        MultiConfigurationProject("Multi-configuration project"),
+        Folder("Folder"),
+        MultibranchPipeline("Multibranch Pipeline"),
+        OrganizationFolder("Organization Folder");
+
+        private final String htmlText;
+
+        ProjectType(String htmlText) {
+            this.htmlText = htmlText;
+        }
+
+        public String getHtmlText() {
+            return htmlText;
+        }
     }
 }
 
